<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:background="@drawable/drawable_dialog_radius_corner">

        <TextView
            android:id="@+id/header"
            style="@style/Header_Montserrat_Bold_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:text="@string/error"
            android:textColor="@android:color/holo_red_light"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/layoutButton"
            android:layout_below="@+id/header">

            <TextView
                android:id="@+id/message"
                style="@style/Message_Montserrat_12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lineSpacingExtra="2.7sp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="Message show here"
                android:textColor="@color/grey_blue"
                android:textSize="14sp" />
        </ScrollView>

        <LinearLayout
            android:id="@+id/layoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonCancel"
                style="@style/Header_Montserrat_Bold_13"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_edittext"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/drawable_button_border_blue"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/buttonRetry"
                style="@style/Button_Common"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_edittext"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:background="@drawable/drawable_button_common"
                android:text="@string/retry"
                android:textAllCaps="false" />
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>