<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/drawable_xmobile_splash">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnBack">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_square_delfi" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/header_need_help"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_23sdp"
                android:textStyle="bold"
                android:typeface="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    style="@style/Header_Montserrat_Bold_16"
                    android:typeface="normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:lineSpacingExtra="3sp"
                    android:text="@string/title_need_help_page"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    style="@style/Message_Montserrat_12"
                    android:typeface="normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/subtitle_need_help_page"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/Message_Montserrat_12"
                            android:textSize="@dimen/_12sdp"
                            android:typeface="normal"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/email"
                            android:textColor="@color/white" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="support@delfi.com"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_13sdp"
                                android:typeface="normal"
                                tools:ignore="HardcodedText" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="0.5dp"
                                android:layout_marginTop="5dp"
                                android:background="#acacac" />

                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/Message_Montserrat_12"
                            android:textSize="@dimen/_12sdp"
                            android:typeface="normal"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/phone"
                            android:textColor="@color/white" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:scaleType="fitXY"
                                    android:src="@drawable/ic_denmark" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginStart="10dp"
                                    android:layout_marginLeft="10dp"
                                    android:gravity="center_vertical"
                                    android:text="+45 78 768 555"
                                    android:textColor="@color/white"
                                    android:textSize="@dimen/_13sdp"
                                    android:typeface="normal"
                                    tools:ignore="HardcodedText" />

                            </LinearLayout>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="0.5dp"
                                android:layout_marginTop="5dp"
                                android:background="#acacac" />

                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/Message_Montserrat_12"
                            android:textSize="@dimen/_12sdp"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:paddingEnd="15dp"
                            android:paddingRight="15dp"
                            android:text="@string/opening_hours"
                            android:textColor="@color/white"
                            android:typeface="normal"
                            tools:ignore="RtlSymmetry" />

                        <LinearLayout
                            style="@style/Message_Montserrat_12"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="08:30-16:30"
                                    android:textColor="@color/white"
                                    android:textSize="@dimen/_13sdp"
                                    android:typeface="normal"
                                    tools:ignore="HardcodedText" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginStart="10dp"
                                    android:layout_marginLeft="10dp"
                                    android:gravity="center_vertical"
                                    android:singleLine="true"
                                    android:text="@string/week_day"
                                    android:textColor="@color/white"
                                    android:textSize="12sp"
                                    android:typeface="normal"
                                    tools:ignore="HardcodedText" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="08:30-15:00"
                                    android:textColor="@color/white"
                                    android:textSize="@dimen/_13sdp"
                                    android:typeface="normal"
                                    tools:ignore="HardcodedText" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginStart="10dp"
                                    android:layout_marginLeft="10dp"
                                    android:gravity="center_vertical"
                                    android:singleLine="true"
                                    android:text="@string/weekend"
                                    android:textColor="@color/white"
                                    android:textSize="12sp"
                                    android:typeface="normal"
                                    tools:ignore="HardcodedText" />


                            </LinearLayout>

                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/btnOpenGuide"
                    style="@style/Button_Common"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/drawable_button_access_admin_mode"
                    android:drawableRight="@drawable/ic_question"
                    android:drawablePadding="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/how_to_access_administrator_mode"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnBack"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:typeface="normal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_edittext"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/drawable_button_border_blue"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary" />

    <TextView
        style="@style/Message_Montserrat_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="7dp"
        android:text="© 2020 Delfi Technologies"
        android:textColor="@color/white"
        android:textSize="@dimen/_11sdp"
        android:typeface="normal"
        tools:ignore="HardcodedText" />

    <RelativeLayout
        android:id="@+id/layoutSotiGuide"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        tools:visibility="visible">

        <Button
            android:id="@+id/btnSkip"
            style="@style/Message_Montserrat_12"
            android:typeface="normal"
            android:layout_width="100dp"
            android:layout_height="@dimen/height_edittext"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/skip"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/gifSotiGuide"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/tvSotiGuide"
            style="@style/Message_Montserrat_12"
            android:typeface="normal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_90sdp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:lineSpacingExtra="1dp"
            android:text="Press from the bottom half of the screen, from within 15% of the left side of the device"
            android:textColor="@color/white"
            android:textSize="@dimen/_11sdp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkboxNotAgain"
            style="@style/Message_Montserrat_12"
            android:typeface="normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:buttonTint="@color/white"
            android:padding="10dp"
            android:visibility="gone"
            android:text="@string/do_not_show_on_start_up_dialog"
            android:textColor="@color/grey"
            android:textSize="@dimen/_9sdp" />

    </RelativeLayout>

</RelativeLayout>


